# external-minilogger

./: .editorconfig  CMakeLists.txt
cmake/: FindGLIB.cmake  MiniLoggerConfig.cmake.in
include/: log.h
src/: backtrace.cpp  log.cpp
test/: CMakeLists.txt  main.c  main.cpp
